--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  ###################################
-  # 1) PostgreSQL (可選)
-  ###################################
+  ######################
+  # 1) PostgreSQL
+  ######################
   suzoo_postgres:
     image: postgres:15-alpine
     container_name: suzoo_postgres
@@ -19,9 +19,9 @@ services:
       timeout: 5s
       retries: 5
 
-  ###################################
-  # 2) Ganache (ETH 私有鏈, 可選)
-  ###################################
+  ######################
+  # 2) Ganache (ETH)
+  ######################
   suzoo_ganache:
     image: trufflesuite/ganache-cli:latest
     container_name: suzoo_ganache
@@ -31,9 +31,9 @@ services:
     networks:
       - suzoo_net
 
-  ###################################
-  # 3) IPFS (可選)
-  ###################################
+  ######################
+  # 3) IPFS
+  ######################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
@@ -46,9 +46,9 @@ services:
     networks:
       - suzoo_net
 
-  ###################################
-  # 4) FastAPI (Python後端, 可選)
-  ###################################
+  ######################
+  # 4) FastAPI (可選)
+  ######################
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -69,9 +69,9 @@ services:
       timeout: 5s
       retries: 3
 
-  ###################################
-  # 5) Express (Node.js 後端)
-  ###################################
+  ######################
+  # 5) Express
+  ######################
   suzoo_express:
     build:
       context: ./express
@@ -94,9 +94,9 @@ services:
       timeout: 5s
       retries: 5
 
-  ###################################
+  ######################
   # 6) React 前端
-  ###################################
+  ######################
   suzoo_react:
     build:
       context: ./frontend
@@ -116,9 +116,9 @@ services:
       timeout: 10s
       retries: 3
 
-  ###################################
+  ######################
   # 7) Nginx (對外)
-  ###################################
+  ######################
   suzoo_nginx:
     build:
       context: ./nginx
