--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################################
-# 1) HTTP => 301 => HTTPS
+# HTTP 80 -> HTTPS
 ########################################################
 server {
     listen 80;
@@ -9,7 +9,7 @@ server {
 }
 
 ########################################################
-# 2) HTTPS 服務 (443)
+# HTTPS
 ########################################################
 server {
     listen 443 ssl;
@@ -23,7 +23,6 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # Docker DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
@@ -36,7 +35,6 @@ server {
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
-        # 如果直接用 Nginx serve 靜態檔: root /usr/share/nginx/html; try_files $uri /index.html;
     }
 
     ####################################################
@@ -77,7 +75,7 @@ server {
     }
 
     ####################################################
-    # FastAPI => suzoo_fastapi:8000 (路徑 /api/py/)
+    # FastAPI (可選) => suzoo_fastapi:8000
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
