--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################################
-# HTTP 80 -> HTTPS
+# HTTP => 301 => HTTPS
 ########################################################
 server {
     listen 80;
@@ -9,13 +9,13 @@ server {
 }
 
 ########################################################
-# HTTPS
+# HTTPS 服務 (443)
 ########################################################
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證 & 私鑰
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_session_timeout 5m;
@@ -26,7 +26,7 @@ server {
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
-    # React (SPA) => suzoo_react:3000
+    # React SPA -> suzoo_react:3000
     ####################################################
     location / {
         proxy_pass http://suzoo_react:3000;
@@ -75,7 +75,7 @@ server {
     }
 
     ####################################################
-    # FastAPI (可選) => suzoo_fastapi:8000
+    # FastAPI => suzoo_fastapi:8000
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
