--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,88 +1,53 @@
-########################################################
-# HTTP => 301 => HTTPS
-########################################################
+# Upstreams for backend services
+upstream express_backend {
+    server suzoo_express:${EXPRESS_PORT};
+}
+upstream fastapi_backend {
+    server suzoo_fastapi:${FASTAPI_PORT};
+}
+
+# Redirect HTTP to HTTPS
 server {
     listen 80;
-    listen [::]:80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    server_name suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-########################################################
-# HTTPS 服務 (443)
-########################################################
+# Main HTTPS server
 server {
     listen 443 ssl;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    server_name suzookaizokuhunter.com;
 
-    # SSL 憑證
-    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_session_timeout 5m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+    # SSL certificate configuration
+    ssl_certificate /etc/nginx/certs/your_cert.pem;
+    ssl_certificate_key /etc/nginx/certs/your_key.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
-    resolver 127.0.0.11 valid=30s;
+    # Increase max upload size
+    client_max_body_size 50m;
 
-    ####################################################
-    # React SPA -> suzoo_react:3000
-    ####################################################
-    location / {
-        proxy_pass http://suzoo_react:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
-    }
-
-    ####################################################
-    # Express API => suzoo_express:${EXPRESS_PORT}
-    ####################################################
-    location /auth/ {
-        proxy_pass http://suzoo_express:${EXPRESS_PORT};
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
-    }
-    location /membership/ {
-        proxy_pass http://suzoo_express:${EXPRESS_PORT};
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
-    }
-    location /upload/ {
-        client_max_body_size 100m;
-        proxy_pass http://suzoo_express:${EXPRESS_PORT};
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+    # API routing
+    location /api/upload {
+        proxy_pass http://fastapi_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # disable buffering for immediate upload pass-through
+        proxy_request_buffering off;
     }
     location /api/ {
-        proxy_pass http://suzoo_express:${EXPRESS_PORT};
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_pass http://express_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # FastAPI => suzoo_fastapi:8000
-    ####################################################
-    location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+    # Frontend static files and SPA fallback
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html =404;
     }
 }
