--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,53 +1,29 @@
-# Upstreams for backend services
-upstream express_backend {
-    server suzoo_express:${EXPRESS_PORT};
-}
-upstream fastapi_backend {
-    server suzoo_fastapi:${FASTAPI_PORT};
-}
-
-# Redirect HTTP to HTTPS
 server {
     listen 80;
-    server_name suzookaizokuhunter.com;
-    return 301 https://$host$request_uri;
-}
+    server_name localhost;
 
-# Main HTTPS server
-server {
-    listen 443 ssl;
-    server_name suzookaizokuhunter.com;
+    # React build 出來的靜態檔案根目錄
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
-    # SSL certificate configuration
-    ssl_certificate /etc/nginx/certs/your_cert.pem;
-    ssl_certificate_key /etc/nginx/certs/your_key.key;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    # Increase max upload size
-    client_max_body_size 50m;
-
-    # API routing
-    location /api/upload {
-        proxy_pass http://fastapi_backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # disable buffering for immediate upload pass-through
-        proxy_request_buffering off;
-    }
+    # Express 後端 => /api/
     location /api/ {
-        proxy_pass http://express_backend;
+        proxy_pass http://suzoo_express:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Frontend static files and SPA fallback
+    # FastAPI => /fastapi/
+    location /fastapi/ {
+        proxy_pass http://suzoo_fastapi:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # 其他路徑 => React (SPA)
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ /index.html;
     }
 }
