--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,93 +1,143 @@
-version: "3.9"
+version: "3.8"
 
 services:
-  # ================
-  # 1) Nginx
-  # ================
-  suzoo_nginx:
-    image: nginx:latest
-    container_name: suzoo_nginx
+  ######################
+  # 1) PostgreSQL
+  ######################
+  suzoo_postgres:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - suzoo_db_data:/var/lib/postgresql/data
+    networks:
+      - suzoo_net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 5s
+      retries: 5
+
+  ######################
+  # 2) Ganache (ETH)
+  ######################
+  suzoo_ganache:
+    image: trufflesuite/ganache-cli:latest
+    command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
     ports:
-      - "80:80"
-      # 如果需要 SSL，則在此也可加 "443:443" 並調整 suzoo.conf
+      - "8545:8545"
+    networks:
+      - suzoo_net
+
+  ######################
+  # 3) IPFS
+  ######################
+  suzoo_ipfs:
+    image: ipfs/go-ipfs:latest
     volumes:
-      - ./nginx/suzoo.conf:/etc/nginx/conf.d/default.conf:ro
-      - react-static:/usr/share/nginx/html:ro
-    depends_on:
-      suzoo_react:
-        condition: service_healthy
-      suzoo_express:
-        condition: service_healthy
-      suzoo_fastapi:
-        condition: service_healthy
-      suzoo_crawler:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      - suzoo_ipfs_data:/data/ipfs
+    command: daemon
+    ports:
+      - "5001:5001"
+      - "8080:8080"
+    networks:
+      - suzoo_net
 
-  # ================
-  # 2) React 前端
-  # ================
-  suzoo_react:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: suzoo_react
-    volumes:
-      - react-static:/app/build
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  # ================
-  # 3) Express 後端
-  # ================
-  suzoo_express:
-    build:
-      context: ./express
-      dockerfile: Dockerfile
-    container_name: suzoo_express
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  # ================
+  ######################
   # 4) FastAPI (可選)
-  # ================
+  ######################
   suzoo_fastapi:
     build:
       context: ./fastapi
       dockerfile: Dockerfile
-    container_name: suzoo_fastapi
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  # ================
-  # 5) Crawler (可選)
-  # ================
-  suzoo_crawler:
-    build:
-      context: ./crawler
-      dockerfile: Dockerfile
-    container_name: suzoo_crawler
     depends_on:
-      suzoo_fastapi:
-        condition: service_healthy
+      - suzoo_ganache
+      - suzoo_ipfs
+    env_file:
+      - .env
+    expose:
+      - "8000"
+    networks:
+      - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "echo 1"]
-      interval: 30s
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health"]
+      interval: 10s
       timeout: 5s
       retries: 3
 
+  ######################
+  # 5) Express
+  ######################
+  suzoo_express:
+    build:
+      context: ./express
+      dockerfile: Dockerfile
+    depends_on:
+      - suzoo_postgres
+      - suzoo_ganache
+      - suzoo_ipfs
+      - suzoo_fastapi
+    env_file:
+      - .env
+    expose:
+      - "3000"
+    networks:
+      - suzoo_net
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  ######################
+  # 6) React 前端
+  ######################
+  suzoo_react:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    depends_on:
+      - suzoo_express
+    env_file:
+      - .env
+    expose:
+      - "3000"
+    ports:
+      - "3000:3000"
+    networks:
+      - suzoo_net
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  ######################
+  # 7) Nginx (對外)
+  ######################
+  suzoo_nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    depends_on:
+      - suzoo_react
+      - suzoo_express
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/suzoo.conf:/etc/nginx/conf.d/suzoo.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    restart: unless-stopped
+    networks:
+      - suzoo_net
+
+networks:
+  suzoo_net:
+    driver: bridge
+
 volumes:
-  react-static:
+  suzoo_db_data:
+  suzoo_ipfs_data:
