--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,29 +1,43 @@
+upstream react_app {
+    server suzoo_react:3000;
+}
+
+upstream express_app {
+    server suzoo_express:3000;
+}
+
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
-    # React build 出來的靜態檔案根目錄
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-
-    # Express 後端 => /api/
-    location /api/ {
-        proxy_pass http://suzoo_express:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # FastAPI => /fastapi/
-    location /fastapi/ {
-        proxy_pass http://suzoo_fastapi:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # 其他路徑 => React (SPA)
+    # 前端
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://react_app;
     }
+
+    # Express API
+    location /auth {
+        proxy_pass http://express_app;
+    }
+    location /membership {
+        proxy_pass http://express_app;
+    }
+    location /upload {
+        proxy_pass http://express_app;
+    }
+    location /profiles {
+        proxy_pass http://express_app;
+    }
+    location /infringement {
+        proxy_pass http://express_app;
+    }
+    location /payment {
+        proxy_pass http://express_app;
+    }
+    location /health {
+        proxy_pass http://express_app/health;
+    }
+
+    # 其他可在此加
+    # SSL/HTTPS設定可加 server_name domain.com; ...
 }
