--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 # 安裝系統套件
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN npm install
 
 COPY . .
