--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,43 +1,107 @@
-upstream react_app {
-    server suzoo_react:3000;
-}
-
-upstream express_app {
-    server suzoo_express:3000;
-}
-
+########################################################
+# HTTP 80 => 301 => HTTPS
+########################################################
 server {
     listen 80;
-    server_name _;
+    listen [::]:80;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # 前端
+    # 將所有 http 流量自動 301 重導向 https
+    return 301 https://$host$request_uri;
+}
+
+########################################################
+# HTTPS 服務 (443)
+########################################################
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    # =============================
+    # SSL 憑證設定 (Let's Encrypt)
+    # =============================
+    ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+
+    # 一些常用 SSL/TLS 設定
+    ssl_session_timeout 5m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Docker 內部 DNS
+    resolver 127.0.0.11 valid=30s;
+
+    ####################################################
+    # React SPA => suzoo_react:3000
+    ####################################################
+    # 若你前端已打包成靜態檔，也可直接 serve；但這裡假設要 proxy 到 React dev server。
     location / {
-        proxy_pass http://react_app;
+        proxy_pass http://suzoo_react:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # Express API
-    location /auth {
-        proxy_pass http://express_app;
-    }
-    location /membership {
-        proxy_pass http://express_app;
-    }
-    location /upload {
-        proxy_pass http://express_app;
-    }
-    location /profiles {
-        proxy_pass http://express_app;
-    }
-    location /infringement {
-        proxy_pass http://express_app;
-    }
-    location /payment {
-        proxy_pass http://express_app;
-    }
-    location /health {
-        proxy_pass http://express_app/health;
+    ####################################################
+    # Express API => suzoo_express:3001 (範例)
+    #
+    # 依需求將 /auth /membership /upload /api 等
+    # 都反向代理到同一個容器
+    ####################################################
+    location /auth/ {
+        proxy_pass http://suzoo_express:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # 其他可在此加
-    # SSL/HTTPS設定可加 server_name domain.com; ...
+    location /membership/ {
+        proxy_pass http://suzoo_express:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+    }
+
+    location /upload/ {
+        # 若需要上傳大檔，務必增加限制
+        client_max_body_size 100m;
+        proxy_pass http://suzoo_express:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+    }
+
+    # 例如 /api/ 也同樣指向 express
+    location /api/ {
+        proxy_pass http://suzoo_express:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+    }
+
+    ####################################################
+    # FastAPI => suzoo_fastapi:8000
+    #
+    # 假設你想把 Python API 路由在 /api/py/
+    ####################################################
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+    }
 }
