--- a/express/package.json
+++ b/express/package.json
@@ -7,20 +7,20 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.30.0",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.0",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.0",
+    "nodemailer": "^6.9.3",
+    "cors": "^2.8.5",
+    "sequelize": "^6.31.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.0",
+    "dotenv": "^16.0.3",
+    "multer": "^1.4.5-lts.1",
+    "crypto-js": "^4.1.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
     "sharp": "^0.32.1",
     "stripe": "^11.12.0",
     "web3": "^1.10.0"
+    // 如果還有其他依賴請一併列出
   }
 }
