--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - suzoo_net
 
   ######################
-  # 4) FastAPI (若你需要)
+  # 4) FastAPI (可選)
   ######################
   suzoo_fastapi:
     build:
@@ -72,6 +72,7 @@ services:
     build:
       context: ./express
       dockerfile: Dockerfile
+    container_name: suzoo_express         # <-- 新增 container_name
     depends_on:
       - suzoo_postgres
       - suzoo_ganache
@@ -79,6 +80,11 @@ services:
       - suzoo_fastapi
     env_file:
       - .env
+    ports:
+      - "3000:3000"                       # <-- 新增對外埠口
+    environment:                          # <-- 新增環境變數
+      - GMAIL_USER=jeffqqm@gmail.com
+      - GMAIL_PASS=Zack967988
     expose:
       - "3000"
     networks:
