--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -36,7 +36,6 @@ server {
     ####################################################
     # React SPA => suzoo_react:3000
     ####################################################
-    # 若你前端已打包成靜態檔，也可直接 serve；但這裡假設要 proxy 到 React dev server。
     location / {
         proxy_pass http://suzoo_react:3000;
         proxy_http_version 1.1;
@@ -47,13 +46,10 @@ server {
     }
 
     ####################################################
-    # Express API => suzoo_express:3001 (範例)
-    #
-    # 依需求將 /auth /membership /upload /api 等
-    # 都反向代理到同一個容器
+    # Express API => suzoo_express:3000 (修正 port 為 3000)
     ####################################################
     location /auth/ {
-        proxy_pass http://suzoo_express:3001;
+        proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
@@ -62,7 +58,7 @@ server {
     }
 
     location /membership/ {
-        proxy_pass http://suzoo_express:3001;
+        proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
@@ -71,9 +67,8 @@ server {
     }
 
     location /upload/ {
-        # 若需要上傳大檔，務必增加限制
         client_max_body_size 100m;
-        proxy_pass http://suzoo_express:3001;
+        proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
@@ -81,9 +76,8 @@ server {
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # 例如 /api/ 也同樣指向 express
     location /api/ {
-        proxy_pass http://suzoo_express:3001;
+        proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
@@ -93,8 +87,6 @@ server {
 
     ####################################################
     # FastAPI => suzoo_fastapi:8000
-    #
-    # 假設你想把 Python API 路由在 /api/py/
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
