--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   ######################
   # 1) PostgreSQL
@@ -82,17 +80,12 @@ services:
       - suzoo_fastapi
     env_file:
       - .env
-
-    # ✅ 不要對外暴露 3000，僅在容器內部透過 suzoo_net
-    # ports: 
-    #   - "3000:3000"
+    # Express 預設在容器內跑 port 3000
     expose:
       - "3000"
-
     environment:
       - GMAIL_USER=jeffqqm@gmail.com
       - GMAIL_PASS=Zack967988
-
     networks:
       - suzoo_net
     healthcheck:
