--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,12 +1,10 @@
 ########################################################
-# HTTP 80 => 301 => HTTPS
+# HTTP => 301 => HTTPS
 ########################################################
 server {
     listen 80;
     listen [::]:80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-    # 將所有 http 流量自動 301 重導向 https
     return 301 https://$host$request_uri;
 }
 
@@ -18,19 +16,14 @@ server {
     listen [::]:443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # =============================
-    # SSL 憑證設定 (Let's Encrypt)
-    # =============================
+    # Let's Encrypt 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
-    # 一些常用 SSL/TLS 設定
     ssl_session_timeout 5m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
@@ -46,7 +39,7 @@ server {
     }
 
     ####################################################
-    # Express API => suzoo_express:3000 (修正 port 為 3000)
+    # Express => suzoo_express:3000
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express:3000;
@@ -61,39 +54,25 @@ server {
         proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        ...
     }
 
     location /upload/ {
         client_max_body_size 100m;
         proxy_pass http://suzoo_express:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        ...
     }
 
     location /api/ {
         proxy_pass http://suzoo_express:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        ...
     }
 
     ####################################################
     # FastAPI => suzoo_fastapi:8000
     ####################################################
     location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_pass http://suzoo_fastapi:8000;
+        ...
     }
 }
