--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -24,10 +24,11 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
+    # Docker 內 DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
-    # React SPA => suzoo_react:3000
+    # React -> suzoo_react:3000
     ####################################################
     location / {
         proxy_pass http://suzoo_react:3000;
@@ -39,21 +40,18 @@ server {
     }
 
     ####################################################
-    # Express => suzoo_express:3000
+    # Express -> suzoo_express:3000
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        ...
     }
 
     location /membership/ {
         proxy_pass http://suzoo_express:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host               $host;
         ...
     }
 
