--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -16,19 +16,21 @@ server {
     listen [::]:443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Let's Encrypt 憑證
+    # =============================
+    # SSL 憑證設定 (Let's Encrypt)
+    # =============================
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_session_timeout 5m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # Docker 內 DNS
+    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
-    # React -> suzoo_react:3000
+    # React SPA => suzoo_react:3000
     ####################################################
     location / {
         proxy_pass http://suzoo_react:3000;
@@ -40,37 +42,59 @@ server {
     }
 
     ####################################################
-    # Express -> suzoo_express:3000
+    # Express API => suzoo_express:3000
+    # (假設 Express 在容器內跑的 port=3000)
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
-        ...
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
     location /membership/ {
         proxy_pass http://suzoo_express:3000;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
     location /upload/ {
+        # 若需要上傳大檔，務必增加限制
         client_max_body_size 100m;
         proxy_pass http://suzoo_express:3000;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
+    # 例如 /api/ 也同樣指向 express
     location /api/ {
         proxy_pass http://suzoo_express:3000;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
     ####################################################
     # FastAPI => suzoo_fastapi:8000
+    #
+    # 假設你想把 Python API 路由在 /api/py/
     ####################################################
     location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000;
-        ...
+        proxy_pass http://suzoo_fastapi:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 }
