--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: trufflesuite/ganache-cli:latest
     command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
     ports:
-      - "8545:8545"
+      - "8545:8545"      # 對外暴露 8545
     networks:
       - suzoo_net
 
@@ -44,7 +44,7 @@ services:
       - suzoo_net
 
   ######################
-  # 4) FastAPI (可選)
+  # 4) FastAPI
   ######################
   suzoo_fastapi:
     build:
@@ -56,7 +56,7 @@ services:
     env_file:
       - .env
     expose:
-      - "8000"
+      - "8000"  # FastAPI 預設 8000
     networks:
       - suzoo_net
     healthcheck:
@@ -72,7 +72,7 @@ services:
     build:
       context: ./express
       dockerfile: Dockerfile
-    container_name: suzoo_express
+    container_name: suzoo_express  # 確保與 service name 相同或至少不衝突
     depends_on:
       - suzoo_postgres
       - suzoo_ganache
@@ -80,13 +80,11 @@ services:
       - suzoo_fastapi
     env_file:
       - .env
-
     expose:
-      - "3000"
+      - "3000"  # Express 內部啟動 3000 (app.listen(3000))
     environment:
       - GMAIL_USER=jeffqqm@gmail.com
       - GMAIL_PASS=Zack967988
-
     networks:
       - suzoo_net
     healthcheck:
@@ -108,7 +106,7 @@ services:
     env_file:
       - .env
     expose:
-      - "3000"
+      - "3000"   # React dev server 3000
     ports:
       - "3000:3000"
     networks:
