--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -11,6 +11,23 @@ server {
 ########################################################
 # HTTPS 服務 (443)
 ########################################################
+# 1) upstream 定義在 server 區塊外 (建議置於 http 內)
+#   但若無法自行改 Dockerfile，可直接先寫在此最上方或
+#   http {} 也行。為簡潔，此處示範放在 server 區塊外。
+upstream suzoo_express {
+    # 您 Docker Compose 的 express 服務名稱 => suzoo_express
+    # Express app.listen(3000)
+    server suzoo_express:3000;
+}
+
+upstream suzoo_react {
+    server suzoo_react:3000;
+}
+
+upstream suzoo_fastapi {
+    server suzoo_fastapi:8000;
+}
+
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
@@ -34,7 +51,8 @@ server {
     # (React dev server)
     ####################################################
     location / {
-        proxy_pass http://suzoo_react:3000;
+        proxy_pass http://suzoo_react; 
+        # 修正: 使用 upstream suzoo_react (而非硬碼 suzoo_react:3000)
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -43,11 +61,11 @@ server {
     }
 
     ####################################################
-    # Express => suzoo_express:3000
-    # (假設 Express app.listen(3000))
+    # Express => suzoo_express
+    # (Express port=3000)
     ####################################################
     location /auth/ {
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -56,7 +74,7 @@ server {
     }
 
     location /membership/ {
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -66,7 +84,7 @@ server {
 
     location /upload/ {
         client_max_body_size 100m;
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -75,7 +93,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://suzoo_express:3000;
+        proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -84,11 +102,11 @@ server {
     }
 
     ####################################################
-    # FastAPI => suzoo_fastapi:8000
-    # 假設想放在 /api/py/
+    # FastAPI => suzoo_fastapi
     ####################################################
     location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000/;
+        proxy_pass http://suzoo_fastapi/;
+        # 註: 建議保留 / => .../ 以免路由少一層
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
